# libcontemporary

./: .eslintrc.json  .gitignore  .gitmodules  .parlance.json  CMakeLists.txt  README.md  appveyor.yml  build.sh  package-lock.json  package.json  project-config.js  test.sh  travis.sh
cntp-appicontool/: CMakeLists.txt  combinedicon.cpp  combinedicon.h  main.cpp  platformicongenerator.cpp  platformicongenerator.h  resources.qrc
cntp-appicontool/platformgenerators/: androidplatformicongenerator.cpp  androidplatformicongenerator.h  macplatformicongenerator.cpp  macplatformicongenerator.h  winplatformicongenerator.cpp  winplatformicongenerator.h
cntp-macdeploy/: CMakeLists.txt  applicationbundle.cpp  applicationbundle.h  common.cpp  common.h  library.cpp  library.h  main.cpp
cntp-macpack/: ACKNOWLEDGMENTS  CMakeLists.txt  alias.cpp  alias.h  diskimage.cpp  diskimage.h  dsstore.cpp  dsstore.h  dsstoreentry.cpp  dsstoreentry.h  main.cpp  main.mm  resources.qrc  utils.cpp  utils.h
cntp-skel/: CMakeLists.txt  main.cpp  projecttemplate.cpp  projecttemplate.h
cntp-trappstream/: CMakeLists.txt  main.cpp  metainfofile.cpp  metainfofile.h
cntp-trcommon/: CMakeLists.txt  jsonfile.cpp
cntp-trdesktop/: CMakeLists.txt  desktopfile.cpp  desktopfile.h  jsonfile.h  main.cpp
cntp-windeploy/: CMakeLists.txt  common.cpp  common.h  deployfolder.cpp  deployfolder.h  enums.h  main.cpp  portableexecutablefile.cpp  portableexecutablefile.h  systemlibrarydatabase.cpp  systemlibrarydatabase.h  unzip.cpp  unzip.h
lib/: CMakeLists.txt  lib.pro  libcontemporary-config.cmake.in  libcontemporaryConfig.cmake.in  libcontemporary_global.cpp  libcontemporary_global.h  qt_libcontemporary.pri  taboutdialog.cpp  taboutdialog.h  taboutdialog.ui  tapplication.cpp  tapplication.h  tasync.cpp  tasync.h  tcircularspinner.cpp  tcircularspinner.h  tconditionalwidget.cpp  tconditionalwidget.h  tcontentsizer.cpp  tcontentsizer.h  tcsdtools.cpp  tcsdtools.h  tdatetimepicker.cpp  tdatetimepicker.h  tdocumenttabber.cpp  tdocumenttabber.h  terrorflash.cpp  terrorflash.h  texception.cpp  texception.h  the-libs_global.h  thelibs_icons.qrc  thelibs_translations.qrc  thelibsglobal.cpp  thelpmenu.cpp  thelpmenu.h  ticon.cpp  ticon.h  tinputdialog.cpp  tinputdialog.h  (+71 more)
lib/cmake-scripts/: cntp-appicon.cmake  cntp-appstream.cmake  cntp-asan.cmake  cntp-blueprint.cmake  cntp-buildtranslations.cmake  cntp-defaults.cmake  cntp-desktop.cmake  cntp-dmg.cmake  cntp-dotcontemporary.cmake  cntp-enable-coroutines.cmake  cntp-extrainstalldirs.cmake  cntp-fakeit.cmake  cntp-gentranslations.cmake  cntp-init.cmake  cntp-installtranslations.cmake  cntp-macicon.cmake  cntp-pkgconfig.cmake  cntp-plugins.cmake  cntp-publicheaders.cmake  cntp-qml.cmake  cntp-repoversion.cmake  cntp-sharedir.cmake  cntp-sources.cmake  cntp-staticmodule.cmake  cntp-supportlibraries.cmake  cntp-targetname.cmake  cntp-tool.cmake  cntp-translate.cmake  cntp-winappx.cmake
lib/dependencyinjection/: diconcepts.h  didependentobject.cpp  didependentobject.h  diprovidedsingletonobject.h  disingletonobject.cpp  disingletonobject.h  tbasedimanager.cpp  tbasedimanager.h  tdibaseinterface.h  tdimanager.cpp  tdimanager.h  tinjectedpointer.h
lib/jobs/: jobbutton.cpp  jobbutton.h  jobdbus.cpp  jobdbus.h  jobdbusmanager.cpp  jobdbusmanager.h  jobspopover.cpp  jobspopover.h  standardjobprogresswidget.cpp  standardjobprogresswidget.h  standardjobprogresswidget.ui
lib/plugins/: knownpluginmodel.cpp  knownpluginmodel.h  plugininterface.h  pluginmanagementpopover.cpp  pluginmanagementpopover.h  pluginmanagementpopover.ui  tpluginmanager.h  tpluginmanagerhelper.cpp  tpluginmanagerhelper.h  tpluginmanagerpane.cpp  tpluginmanagerpane.h  tpluginmanagerpane.ui
lib/prifiles/: installtranslations.pri  processdesktoptranslations.pri  varset.pri
lib/private/: debuglogpopover.cpp  debuglogpopover.h  debuglogwindow.cpp  debuglogwindow.h  errorflashwidget.cpp  errorflashwidget.h  errorflashwidget.ui  licensetextpopover.cpp  licensetextpopover.h  licensetextpopover.ui  nativeeventfilter.cpp  nativeeventfilter.h  nsalertmac.h  nsalertmac.mm  tapplicationmacprivate.h  tapplicationmacprivate.mm  tmessageboxbackend-mac.mm  tmessageboxbackend-qt.cpp  tmessageboxbackend-win.cpp  tmessageboxbackend-win.h  tmessageboxbackend.h  tqueueguardhelper.cpp  tqueueguardhelper.h  translatorproxy.cpp  translatorproxy.h  tstackedwidgetanimation.cpp  tstackedwidgetanimation.h  tstackedwidgetanimationcontroller.cpp  tstackedwidgetanimationcontroller.h  tstackedwidgetanimationfade.cpp  tstackedwidgetanimationfade.h  tstackedwidgetanimationlift.cpp  tstackedwidgetanimationlift.h  tstackedwidgetanimationslide.cpp  tstackedwidgetanimationslide.h  tstackedwidgetanimationslidehorizontal.cpp  tstackedwidgetanimationslidehorizontal.h  tstackedwidgetanimationslidevertical.cpp  tstackedwidgetanimationslidevertical.h  twindowthumbnail-win.cpp  (+1 more)
lib/ranges/: trange.cpp  trange.h
lib/tcommandpalette/: tcommandpaletteactionscope.cpp  tcommandpaletteactionscope.h  tcommandpaletteallscope.cpp  tcommandpaletteallscope.h  tcommandpalettecompositescope.cpp  tcommandpalettecompositescope.h  tcommandpalettecontroller.cpp  tcommandpalettecontroller.h  tcommandpalettedocumentspecificscope.cpp  tcommandpalettedocumentspecificscope.h  tcommandpalettescope.cpp  tcommandpalettescope.h  tcommandpalettewindow-mac.mm  tcommandpalettewindow.cpp  tcommandpalettewindow.h  tcommandpalettewindow.ui
lib/tcsdtools/: csdbuttonbox-objc.mm  csdbuttonbox.cpp  csdbuttonbox.h  csdbuttonbox_p.h  csdsizegrip.cpp  csdsizegrip.h  tcsdtools-objc.mm
lib/tdatetimepicker/: datetimepart.cpp  datetimepart.h  datetimepartbutton.cpp  datetimepartbutton.h
lib/tnotification/: tnotification-android.cpp  tnotification-common.cpp  tnotification-linux.cpp  tnotification-linux.h  tnotification-mac.mm  tnotification-win.cpp  tnotification-win.h
lib/touchbar/: tcompositetouchbar.cpp  tcompositetouchbar.h  ttouchbar.cpp  ttouchbar.h  ttouchbar_forwarddeclares.h  (+28 more)
test/: CMakeLists.txt  main.cpp  test.pro  tst_trange.cpp  tst_trange.h  tst_unittesting.cpp
(+165 files in other folders)
